refactor : reduce duplications in exceptions handling