@@ -1,83 +1,108 @@
 package com.tcs.dhv.exception;
 
-import com.fasterxml.jackson.databind.exc.InvalidFormatException;
-import com.tcs.dhv.domain.dto.ApiErrorResponse;
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.validation.ConstraintViolationException;
-import jakarta.validation.ValidationException;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.InternalAuthenticationServiceException;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.security.authentication.BadCredentialsException;
-import org.springframework.security.authentication.InternalAuthenticationServiceException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
-import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.bind.annotation.RestControllerAdvice;
+import com.fasterxml.jackson.databind.exc.InvalidFormatException;
+import org.springframework.dao.DataIntegrityViolationException;
+import jakarta.validation.ConstraintViolationException;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.ValidationException;
+
+import com.tcs.dhv.domain.dto.ApiErrorResponse;
 
 import java.time.Instant;
 import java.util.stream.Collectors;
+
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatus;
+
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+
+
 
 @Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiErrorResponse> handleUsernameNotFoundException(Exception ex) {
+    public ResponseEntity<ApiErrorResponse> handleUsernameNotFoundException(final Exception ex) {
         log.error("Caught Exception", ex);
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
-            .message("An unexpected error occurred")
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.internalServerError().body(err);
+        return buildError(HttpStatus.INTERNAL_SERVER_ERROR, "An unexpected error occurred");
     }
 
     @ExceptionHandler(RuntimeException.class)
-    public ResponseEntity<ApiErrorResponse> handleRuntimeException(RuntimeException ex) {
+    public ResponseEntity<ApiErrorResponse> handleRuntimeException(final RuntimeException ex) {
         log.error("Caught RuntimeException", ex);
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
-            .message("An unexpected error occurred")
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.internalServerError().body(err);
+        return buildError(HttpStatus.INTERNAL_SERVER_ERROR, "An unexpected error occurred");
     }
 
     @ExceptionHandler(BadCredentialsException.class)
-    public ResponseEntity<ApiErrorResponse> handleBadCredentialsException(BadCredentialsException ex) {
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.UNAUTHORIZED.value())
-            .message("Incorrect username or password")
-            .timestamp(Instant.now())
-            .build();
-        return new ResponseEntity<>(err, HttpStatus.UNAUTHORIZED);
+    public ResponseEntity<ApiErrorResponse> handleBadCredentialsException(final BadCredentialsException ex) {
+        log.error("Bad Credentials", ex);
+        return buildError(HttpStatus.UNAUTHORIZED, "Incorrect username or password");
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<ApiErrorResponse> handleIllegalArgumentException(IllegalArgumentException ex) {
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.BAD_REQUEST.value())
-            .message(ex.getMessage())
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.badRequest().body(err);
+    public ResponseEntity<ApiErrorResponse> handleIllegalArgumentException(final IllegalArgumentException ex) {
+        log.error("Illegal Argument", ex);
+        return buildError(HttpStatus.BAD_REQUEST, ex.getMessage());
     }
 
     @ExceptionHandler(ValidationException.class)
-    public ResponseEntity<ApiErrorResponse> handleValidationException(ValidationException ex) {
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.BAD_REQUEST.value())
-            .message(ex.getMessage())
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.badRequest().body(err);
+    public ResponseEntity<ApiErrorResponse> handleValidationException(final ValidationException ex) {
+        log.error("Validation Exception", ex);
+        return buildError(HttpStatus.BAD_REQUEST, ex.getMessage());
     }
 
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    public ResponseEntity<ApiErrorResponse> handleDataIntegrityViolationException(final DataIntegrityViolationException ex) {
+        log.error("Data integrity violation", ex);
+        return buildError(HttpStatus.CONFLICT, "Data integrity violation" + ex.getMostSpecificCause().getMessage());
+    }
+
+    @ExceptionHandler(EntityNotFoundException.class)
+    public ResponseEntity<ApiErrorResponse> handleEntityNotFoundException(final EntityNotFoundException ex) {
+        log.error("Entity not found", ex);
+        return buildError(HttpStatus.NOT_FOUND, ex.getMessage());
+    }
+
+    @ExceptionHandler(InternalAuthenticationServiceException.class)
+    public ResponseEntity<ApiErrorResponse> handleInternalAuthenticationServiceException(final InternalAuthenticationServiceException ex) {
+        log.error("Internal authentication service error", ex);
+        return buildError(HttpStatus.INTERNAL_SERVER_ERROR, ex.getMessage());
+    }
+
+    @ExceptionHandler(IllegalStateException.class)
+    public ResponseEntity<ApiErrorResponse> handleIllegalStateException(final IllegalStateException ex) {
+        log.error("Illegal state error", ex);
+        return buildError(HttpStatus.INTERNAL_SERVER_ERROR, ex.getMessage());
+    }
+
+    @ExceptionHandler(MailMessagingException.class)
+    public ResponseEntity<ApiErrorResponse> handleMailMessagingException(final MailMessagingException ex){
+        log.error("Mail messaging error", ex);
+        return buildError(HttpStatus.INTERNAL_SERVER_ERROR, ex.getMessage());
+    }
+
+    @ExceptionHandler(InvalidFormatException.class)
+    public ResponseEntity<ApiErrorResponse> handleInvalidFormatException(final InvalidFormatException ex) {
+        log.error("Invalid format", ex);
+        return buildError(HttpStatus.BAD_REQUEST, "Invalid format: " + ex.getMessage());
+    }
+
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    public ResponseEntity<ApiErrorResponse> handleHttpMessageNotReadableException(final HttpMessageNotReadableException ex) {
+        log.error("HTTP message not readable", ex);
+        return buildError(HttpStatus.BAD_REQUEST, "Malformed JSON request");
+    }
 
     @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ApiErrorResponse> handleConstraintViolationException(ConstraintViolationException ex) {
+    public ResponseEntity<ApiErrorResponse> handleConstraintViolationException(final ConstraintViolationException ex) {
+        log.error("Constraint Violation", ex);
         final var errorList = ex.getConstraintViolations()
                 .stream()
                 .map(violation -> new ApiErrorResponse.FieldError(
@@ -92,68 +117,12 @@ public class GlobalExceptionHandler {
                 .timestamp(Instant.now())
                 .errors(errorList)
                 .build();
-
         return ResponseEntity.badRequest().body(err);
     }
 
-
-    @ExceptionHandler(DataIntegrityViolationException.class)
-    public ResponseEntity<ApiErrorResponse> handleDataIntegrityViolationException(DataIntegrityViolationException ex) {
-        log.error("Data integrity violation", ex);
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.CONFLICT.value())
-            .message("Data integrity violation: " + ex.getMostSpecificCause().getMessage())
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(err);
-    }
-
-    @ExceptionHandler(EntityNotFoundException.class)
-    public ResponseEntity<ApiErrorResponse> handleEntityNotFoundException(EntityNotFoundException ex) {
-        log.error("Entity not found", ex);
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.NOT_FOUND.value())
-            .message(ex.getMessage())
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(err);
-    }
-
-    @ExceptionHandler(InternalAuthenticationServiceException.class)
-    public ResponseEntity<ApiErrorResponse> handleInternalAuthenticationServiceException(final InternalAuthenticationServiceException ex) {
-        log.error("Internal authentication service error", ex);
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
-            .message(ex.getMessage())
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(err);
-    }
-
-    @ExceptionHandler(IllegalStateException.class)
-    public ResponseEntity<ApiErrorResponse> handleIllegalStateException(final IllegalStateException ex) {
-        log.error("Illegal state error", ex);
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
-            .message(ex.getMessage())
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(err);
-    }
-
-    @ExceptionHandler(MailMessagingException.class)
-    public ResponseEntity<ApiErrorResponse> handleMailMessagingException(final MailMessagingException exception){
-        log.error("Mail messaging error", exception);
-        final var err = ApiErrorResponse.builder()
-                .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
-                .message(exception.getMessage())
-                .timestamp(Instant.now())
-                .build();
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(err);
-    }
-
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiErrorResponse> handleMethodArgumentNotValid(MethodArgumentNotValidException ex) {
+    public ResponseEntity<ApiErrorResponse> handleMethodArgumentNotValid(final MethodArgumentNotValidException ex) {
+        log.error("Method argument not valid", ex);
         final var errorList = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
@@ -161,36 +130,23 @@ public class GlobalExceptionHandler {
                         fieldError.getField(),
                         fieldError.getDefaultMessage()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.BAD_REQUEST.value())
-            .message("Validation failed")
-            .timestamp(Instant.now())
-            .errors(errorList)
-            .build();
-
+                .status(HttpStatus.BAD_REQUEST.value())
+                .message("Validation failed")
+                .timestamp(Instant.now())
+                .errors(errorList)
+                .build();
         return ResponseEntity.badRequest().body(err);
     }
 
-    @ExceptionHandler(InvalidFormatException.class)
-    public ResponseEntity<ApiErrorResponse> handleInvalidFormatException(InvalidFormatException ex) {
+    private ResponseEntity<ApiErrorResponse> buildError(HttpStatus status, String message) {
         final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.BAD_REQUEST.value())
-            .message("Invalid format: " + ex.getMessage())
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.badRequest().body(err);
-    }
-
-    @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity<ApiErrorResponse> handleHttpMessageNotReadableException(HttpMessageNotReadableException ex) {
-        log.error("HTTP message not readable", ex);
-        final var err = ApiErrorResponse.builder()
-            .status(HttpStatus.BAD_REQUEST.value())
-            .message("Malformed JSON request")
-            .timestamp(Instant.now())
-            .build();
-        return ResponseEntity.badRequest().body(err);
+                .status(status.value())
+                .message(message)
+                .timestamp(Instant.now())
+                .build();
+        return ResponseEntity.status(status).body(err);
     }
 }
